--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EMAIL = arbaj897ansari@gmail.com
 PASS = mbuv ecpp odoe hgjw
-APP_NAME = xerox-cloud
+APP_NAME = born21
 SERVICE_EMAIL = support+mail@gmail.com
