implmemneted born21 email for email services

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EMAIL = arbaj897ansari@gmail.com
-PASS = mbuv ecpp odoe hgjw
+EMAIL = hello@born21.com
+PASS = oqwb nkjl nugm wkhq
 APP_NAME = born21
 SERVICE_EMAIL = support+mail@gmail.com
